--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@
     <!-- Sijil 6 -->
     <div class="journey-content">
       <div class="content" style="background-color: #112e42; padding: 1.5rem; border-radius: 1rem; box-shadow: 0 0 10px #0ff;">
-        <a href="asset/sijil/cert2.JPG" data-lightbox="cert-gallery">
-          <img src="asset/sijil/cert2.JPG" alt="Nmap" style="width: 100%; border-radius: 10px; border: 2px solid #0ff;">
+        <a href="asset/sijil/cert2.jpg" data-lightbox="cert-gallery">
+          <img src="asset/sijil/cert2.jpg" alt="Nmap" style="width: 100%; border-radius: 10px; border: 2px solid #0ff;">
         </a>
       </div>
     </div>
