--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <div class="journey-content">
       <div class="content">
         <br>
-        <img src="asset/projects/nmapbasicscan.PNG" alt="Nmap Basic Scan" style="width: 100%; border-radius: 10px; border: 1px solid #0ff; margin-bottom: 1rem;">
+        <img src="asset/projects/nmapbasicscan.png" alt="Nmap Basic Scan" style="width: 100%; border-radius: 10px; border: 1px solid #0ff; margin-bottom: 1rem;">
         <br>
         <h3 style="color: #0ff;">Nmap Basic Scan</h3>
         <br>
