--- a/index.html
+++ b/index.html
@@ -465,6 +465,34 @@
       </div>
     </div>
   </div>
+<!-- Sijil 8 -->
+    <div class="journey-content">
+      <div class="content" style="background-color: #112e42; padding: 1.5rem; border-radius: 1rem; box-shadow: 0 0 10px #0ff;">
+        <a href="asset/sijil/cert8.jpg" data-lightbox="cert-gallery">
+          <img src="asset/sijil/cert8.jpg" alt="Nmap" style="width: 100%; border-radius: 10px; border: 2px solid #0ff;">
+        </a>
+      </div>
+    </div>
+  </div>
+<!-- Sijil 9 -->
+    <div class="journey-content">
+      <div class="content" style="background-color: #112e42; padding: 1.5rem; border-radius: 1rem; box-shadow: 0 0 10px #0ff;">
+        <a href="asset/sijil/cert9.jpg" data-lightbox="cert-gallery">
+          <img src="asset/sijil/cert9.jpg" alt="Nmap" style="width: 100%; border-radius: 10px; border: 2px solid #0ff;">
+        </a>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+  
 </section>
 
 
@@ -490,3 +518,4 @@
 <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
 </body>
 </html>
+
