--- a/index.html
+++ b/index.html
@@ -483,16 +483,7 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-  
+</section>
 </section>
 
 
@@ -518,4 +509,5 @@
 <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
 </body>
 </html>
+
 
